fix overflow problem in fixed menu with too many chapters

--- a/src/main/front-end/app/less/document-view.less
+++ b/src/main/front-end/app/less/document-view.less
@@ -31,28 +31,37 @@ body#document-view {
   height: 100%;
   
   .document-view-menu {
+    z-index: 100;
     margin-bottom: 30px;
     
     .chapter {
       padding-left: 3px;
       margin-bottom: 5px;
     }
-    
-    @media (min-width: 768px) {
+  }
+  
+  .document-view-text {
+  
+  }
+  
+  @media (min-width: 768px) {
+    .document-view-menu {
       margin-bottom: 0;
       height: 100%;
-      background-color: @light-grey-background-color;
-      border-right: 1px dashed @border-color;
       
       .dv-menu-fixed-wrap {
         position: fixed;
         width: inherit;
-        padding-right: 20px;
+        border-right: 20px solid transparent;
+        top: @document-view-header-height;
+        bottom: @document-view-footer-height;
+        overflow-y: auto;
       }
     }
-  }
-  
-  .document-view-text {
     
+    .document-view-text {
+      background-color: @light-grey-background-color;
+      border-left: 1px dashed @border-color;
+    }
   }
 }
